# rust-crypto-metrics

./: Cargo.toml
src/: api_doc.rs  main.rs
src/models/: depth_history_model.rs  earning_summary_model.rs  earnings_model.rs  mod.rs  rpmuh_model.rs  swap_history_model.rs
src/routes/: depth_route.rs  depths_scraper.rs  earning_scraper.rs  earnings_route.rs  mod.rs  rpmuh_route.rs  rune_pool_scraper.rs  scraper_cron.rs  swaps_route.rs  swaps_scraper.rs
src/services/: db.rs  depth_history_fetcher.rs  earnings_fetcher.rs  fetch_all_cron.rs  mod.rs  rpmuh_fetcher.rs  swaps_history_fetcher.rs
