[package]
name = "rust-crypto-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
futures-util = "0.3.30"
mongodb = "3.1.0"
serde = "1.0.210"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json="1.0"
actix-web = "4.9.0"
dotenv = "0.15"
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }